fixed logo alignment on mobile

--- a/src/features/Header/Header.module.css
+++ b/src/features/Header/Header.module.css
@@ -44,7 +44,7 @@
 
     .logo {
         font-size: 1.75rem;
-        min-width: 13rem;
+        min-width: 7rem;
         padding: 0.5rem 0;
     }
 
